<resources>
    <string name="app_name">News Apps</string>

    <!-- Text to display in the list when there are no news [CHAR LIMIT=NONE] -->
    <string name="no_news">No news found.</string>

    <!-- Error message when there is no internet connectivity [CHAR LIMIT=NONE] -->
    <string name="no_internet_connection">No internet connection.</string>

    <!-- Settings Menu Item [CHAR LIMIT=NONE] -->
    <string name="settings_menu_item">Settings</string>
    <!-- Settings Activity Title [CHAR LIMIT=NONE] -->
    <string name="settings_title">News Settings</string>

    <!-- Strings For Order-By Preference [CHAR LIMIT=30] -->
    <string name="settings_order_by_label">Order By</string>
    <string name="settings_order_by_key" translatable="false">order-by</string>
    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_newest_value</string>

    <!-- Label for order-by newest option [CHAR LIMIT=20] -->
    <string name="settings_order_by_newest_label">Newest</string>
    <string name="settings_order_by_newest_value" translatable="false">newest</string>

    <!-- Label for order-by relevance option [CHAR LIMIT=20] -->
    <string name="settings_order_by_relevance_label">Relevance</string>
    <string name="settings_order_by_relevance_value" translatable="false">relevance</string>

    <!-- Label for section option [CHAR LIMIT=20] -->
    <string name="settings_section_label">Section</string>
    <string name="settings_section_by_key" translatable="false">search-by</string>
    <string name="settings_section_by_default" translatable="false">@string/settings_section_international_value</string>

    <!-- Label for section sport option [CHAR LIMIT=20] -->
    <string name="settings_section_international_label">International</string>
    <string name="settings_section_international_value" translatable="false">international</string>

    <!-- Label for section sport option [CHAR LIMIT=20] -->
    <string name="settings_section_sport_label">Sport</string>
    <string name="settings_section_sport_value" translatable="false">sport</string>

    <!-- Label for section malaysia option [CHAR LIMIT=20] -->
    <string name="settings_section_malaysia_label">Malaysia</string>
    <string name="settings_section_malaysia_value" translatable="false">malaysia</string>

</resources>
