<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="Menu">

    <!-- Setting for order-by -->
    <ListPreference
        android:defaultValue="@string/settings_order_by_newest_value"
        android:entries="@array/settings_order_by_labels"
        android:entryValues="@array/settings_order_by_values"
        android:key="@string/settings_order_by_key"
        android:title="@string/settings_order_by_label" />

    <!-- Setting for search-by -->
    <ListPreference
        android:defaultValue="@string/settings_section_international_value"
        android:entries="@array/settings_section_label"
        android:entryValues="@array/settings_section_value"
        android:key="@string/settings_section_by_key"
        android:title="@string/settings_section_label" />






</PreferenceScreen>